--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -3,6 +3,8 @@
   display: flex;
   width: 300px;
   height: 380px;
+  text-decoration: none;
+  color: inherit;
   flex-direction: column;
   align-items: center;
   box-shadow: 1px 1px 10px #dceae8;
