--- a/src/components/CardElement/CardElement.module.css
+++ b/src/components/CardElement/CardElement.module.css
@@ -1,5 +1,5 @@
 .img {
-  max-width: 100px;
+  width: 100px;
 }
 .box {
   display: flex;
@@ -15,7 +15,7 @@
 .main {
   margin: auto;
   padding-right: 20px;
-  max-height: 609px;
+  height: 609px;
   overflow-y: scroll;
 }
 .main::-webkit-scrollbar {
@@ -92,4 +92,22 @@
   bottom: 1%;
   margin-top: 20px;
   margin-bottom: 10px;
+}
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 70px;
+  justify-content: space-around;
+}
+.name {
+  margin: 0;
+}
+.price {
+  margin: 0;
+}
+.counter {
+  position: absolute;
+  right: 5%;
+  bottom: 1%;
 }
