--- a/src/components/CardElement/CardElement.module.css
+++ b/src/components/CardElement/CardElement.module.css
@@ -1,5 +1,5 @@
 .img {
-  width: 100px;
+  max-width: 100px;
 }
 .box {
   display: flex;
@@ -15,7 +15,7 @@
 .main {
   margin: auto;
   padding-right: 20px;
-  height: 609px;
+  max-height: 609px;
   overflow-y: scroll;
 }
 .main::-webkit-scrollbar {
@@ -94,10 +94,11 @@
   margin-bottom: 10px;
 }
 .info {
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 70px;
+  height: 100px;
   justify-content: space-around;
 }
 .name {
@@ -107,7 +108,28 @@
   margin: 0;
 }
 .counter {
-  position: absolute;
-  right: 5%;
-  bottom: 1%;
+  margin: 0;
+  margin-top: 3px;
+}
+.counterBox {
+  display: flex;
+  max-height: 30px;
+  width: 90px;
+  justify-content: space-around;
+}
+.plusminus {
+  color: black;
+  padding: auto;
+  margin: 0;
+  width: 30px;
+  height: 30px;
+  font: inherit;
+  font-size: 18px;
+  border: 1px solid black;
+  border-radius: 50%;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  z-index: 10000;
 }
