--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -12,7 +12,15 @@
 .title {
   font-family: Proppins;
   margin: 0;
-  margin-top: 8px;
+  padding: 0;
+  font: inherit;
+  font-size: 30px;
+  border: none;
+  background-color: white;
+  cursor: pointer;
+  list-style: none;
+  text-decoration: none;
+  color: inherit;
 }
 .links {
   display: flex;
