--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -56,6 +56,7 @@
 .bar {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   margin: 15px auto 80px;
   list-style: none;
   cursor: pointer;
